Fix dark mode

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,3 +41,10 @@
 .display-none {
   display: none;
 }
+
+@media (prefers-color-scheme: dark) {
+  html,body {
+      background-color: #121212; /* Dark background color */
+      color: #ffffff; /* Light text color */
+  }
+}
